# rdf_utils

./: Cargo.toml  README.md
src/: lib.rs
src/concrete_repr/: file_extension.rs  media_type.rs  syntax.rs  syntax_hint.rs
src/models/: arc.rs  rc.rs
src/parse/: mod.rs
src/parser/: mod.rs
src/parser/anyhow_quads/source/: errors.rs  mod.rs  wrapper.rs
src/repr/: correspondence.rs  file_extension.rs  media_type.rs  mod.rs  syntax.rs  syntax_hint.rs
src/some_syntax_parser/: errors.rs  mod.rs
src/some_syntax_parser/quads/: mod.rs  source.rs
src/some_syntax_parser/triples/: mod.rs  source.rs
src/somehow_parser/: errors.rs
src/somehow_parser/quads/: mod.rs  source.rs
src/syntax/: file_extension.rs  mappings.rs  media_type.rs  mod.rs
