[package]
name = "rdf_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_term = "0.7.1"
sophia_api = "0.7.1"
sophia_turtle = "0.7.1"
sophia_rio = "0.7.1"
sophia_inmem = "0.7.1"
rio_turtle = {version = "0.6.1"}
mownstr = {version = "0.1.3"}
serde = {version = "1.0.133", features=["derive"]}
weak-table = "0.3.2"
