[package]
name = "rdf_utils"
version = "0.1.0"
edition = "2021"
description = "A package with utilities to handle rdf graphs and datasets"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_term = "0.7.1"
sophia_api = "0.7.1"
sophia_turtle = "0.7.1"
sophia_rio = "0.7.1"
sophia_inmem = "0.7.1"
rio_turtle = {version = "0.6.1"}
once_cell = "1.9.0"
phf = { version = "0.10", features = ["macros"] }
http = "0.2.6"
mime = "0.3.16"
